--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@
     line-height: 1.5;
     /* 4. Improve text rendering */
     -webkit-font-smoothing: antialiased;
+
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
   
   /* 5. Improve media defaults */
@@ -52,7 +54,7 @@
 
 h1 {
     text-align: center;
-    margin-top: 40px;
+    margin-top: 30px;
 }
 
 
@@ -78,6 +80,7 @@ h1 {
     cursor: pointer;
 
     font-size: 50px;
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -94,7 +97,7 @@ h1 {
 #button-container {
     display: flex;
     justify-content: center;
-    margin-top: 24px;
+    margin-top: 32px;
 }
 
 #reset-button {
@@ -102,6 +105,9 @@ h1 {
     border-radius: 5px;
     background-color: rgb(224, 224, 224);
     padding: 8px 32px;
+
+    font-weight: bold;
+    font-size: 20px;
 }
 #reset-button:hover {
     cursor: pointer;
